CHANGELOG

2014-08-25 1.11.1

      * While using a temporary index to reindex, do not set the "slaves" index setting (will be set at move-time)

2014-08-20 1.11.0

      * Do not rely of _changed? method to detect reindexing needs, if those methods are missing we probably need to reindex

2014-08-07 1.10.9

      * Upgrade to algoliasearch-client-js 2.5.3
      * Upgrade to typeahead 1.10.4

2014-08-07 1.10.8

      * Fixes searches on Mongoid introduced in 1.10.7 (author: @zarqman)

2014-07-17 1.10.7

      * Query optimization: load search results from database using a single query (author: @outoftime)

2014-07-10 1.10.6

      * Pass the configuration hash to the underlying ```Algolia.init``` method.

2014-07-09 1.10.5

      * Safely reindex your data using ```MyModel.reindex``` (index with a temporary index + move), ```MyModel.reindex!``` do it in-place without removing out-dated records

2014-06-28 1.10.4

      * Ability to disable all indexing tasks (testing purpose)

2014-06-17 1.10.3

      * Pagination: fixed a padding issue with recent versions of Kaminari

2014-05-09 1.10.2

      * Expose synoyms/placeholders features
      * Upgrade to algoliasearch-client-js 2.5.0 (fallback on JSONP if CORS is not available)

2014-04-29 1.10.1

      * Use :if and :unless constraints to detect if a record has changed as well

2014-04-28 1.10.0

      * Ability to configure slave indexes from the ```algoliasearch``` block
      * Ability to target multiple indexes from a single model class

2014-04-23  1.9.5

      * Add missing highlightPreTag/highlightPostTag settings

2014-03-30  1.9.4

      * Ability to index an array of objects using the `index_objects` method. Ref #15
      * Upgrade typeahead.js to 0.10.2 (fixed flickering)
      * Upgrade algoliasearch-client-ruby to 1.2.8 (fixed unhandled exception)
      * Upgrade algoliasearch-client-js to 2.4.5 (embed last ExplainResults helper fixes)

2014-03-26  1.9.3

      * Ruby 1.8 compatibility