@@ -3,6 +3,7 @@ CHANGELOG
 2014-08-25 1.11.1
 
       * While using a temporary index to reindex, do not set the "slaves" index setting (will be set at move-time)
+      * Ability to strip HTML tags from attributes
 
 2014-08-20 1.11.0
 
